# mcp_server

./: .gitignore  COMMITS.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp_config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
docs/: architecture.md  auth-setup-guide.md  enterprise.md  inspector-guide.md  learning.md  mcp-configuration-guide.md  prompts-guide.md
examples/: client_config.json  usage.md
scripts/: dev.ps1  dev.sh  inspect.ps1  inspect.sh  run_http.sh  run_stdio.sh  setup_ide.ps1  setup_ide.sh  test_mcp.sh
src/python_package_mcp_server/: __init__.py  cli.py  config.py  server.py
src/python_package_mcp_server/prompts/: README.md  loader.py
src/python_package_mcp_server/resources/: README.md  __init__.py  codebase.py  dart_standards.py  dependencies.py  loader.py  packages.py  project_index.py  python_standards.py  typescript_standards.py
src/python_package_mcp_server/security/: __init__.py  audit.py  auth.py  policy.py  user_manager.py
src/python_package_mcp_server/tools/: auth.py  dart.py  env.py  install.py  python.py  sync.py  typescript.py
src/python_package_mcp_server/transports/: __init__.py  http.py
src/python_package_mcp_server/utils/: dart_wrapper.py  package_manager_wrapper.py  project_scanner.py  python_wrapper.py  typescript_wrapper.py
tests/: test_auth_users.py  test_dart_resources.py  test_dart_tools.py  test_resources.py  test_security.py  test_tools.py  test_typescript_resources.py  test_typescript_tools.py
(+53 files in other folders)
